--- a/.gitignore
+++ b/.gitignore
@@ -1747,3 +1747,7 @@ node_modules/yallist/LICENSE
 node_modules/yallist/package.json
 node_modules/yallist/README.md
 node_modules/yallist/yallist.js
+
+node_modules
+./node_modules
+/node_modules
