--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3",
-    "mongoose": "^8.2.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
+    "express": "^4.19.2",
+    "mongoose": "^8.2.2",
+    "morgan": "^1.10.0"
   }
 }
